# fish-scraper

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  download_chl.py  download_sst.py  pyproject.toml  requirements.txt
.github/workflows/: pipeline.yml  refresh-copernicus.yml  refresh-fishing-types.yml  refresh-ifop.yml  refresh-raw.yml  vms-refresh.yml
data/bitacora/: bitacora_caldera_jurel_diccionario.md  cod_barco_lookup_leads.md  ifop_cod_barco_README.md
data/output/: diccionario_haul_env.md  zarpes_atacama_capture_diccionario.md  zarpes_atacama_haul_location_diccionario.md
docs/: cloud.md  ships_enriched.md
downloads/: download_bgc.py  download_sla.py  download_sst.py  download_wind.py
enrich/: enrich_ships.py
exploration/: 00_model.ipynb  01_xolot_trajectory.ipynb  02_fleet_coverage.ipynb
filters/: filter_ships.py
processing/: run_all.py
processing/bitacora/: clean_bitacora.py  filter_bitacora.py  match_ifop_names.py  match_landings.py  puertos_atacama.json
processing/capture/: README.md  run_pipeline.py
processing/copernicus/: README.md  build_forecast_grid.py  download_bgc.py  download_bgc_forecast.py  download_chl.py  download_phy.py  download_phy_forecast.py  download_sla.py  download_sst.py  download_wind.py  run_forecast_pipeline.py  run_pipeline.py  sample_haul_environment.py
processing/filter/: bridge_register_vms.py  filter_register.py  filter_vms_caldera.py  scrape_rpa_registry.py
processing/ifop/: README.md  run_pipeline.py
scripts/: r2_common.sh  r2_pull.sh  r2_push.sh
(+49 files in other folders)
