[project]
name = "sst-atacama"
version = "0.1.0"
description = "Descarga y preprocesamiento de datos oceanográficos y pesqueros para la costa de Atacama"
requires-python = ">=3.11"
dependencies = [
    "copernicusmarine>=2.0,<3",
    "xarray>=2024.0",
    "pandas>=2.0",
    "netCDF4>=1.6",
    "scipy>=1.11",
    "jupyter>=1.0",
    "matplotlib>=3.8",
    "python-dotenv>=1.0",
    "requests>=2.31",
    "playwright>=1.44",
]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "pytest>=8",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
# E/W (pycodestyle), F (pyflakes), I (isort), UP (pyupgrade), B (bugbear).
select = ["E", "W", "F", "I", "UP", "B"]
# E501 (line too long) lo maneja el formateador; no bloqueamos por longitud.
ignore = ["E501"]

[tool.ruff.format]
# Comillas dobles y saltos de línea LF, consistente con el código actual.
quote-style = "double"
line-ending = "lf"
